<resources>
    <string name="app_name">1601 assignment1</string>
    <string name="yes_message">Yes, you answered it correctly</string>>
    <string name="no_message">No! you did not answer it correctly</string>
    <string name="next_problem">Next Problem</string>
    <string name="prev_problem">Previous Problem</string>
    <string name="empty">empty</string>
    <string name= "not_available">NAN</string>
    <string name="buttonA">A</string>
    <string name="buttonB">B</string>
    <string name="buttonC">C</string>
    <string name="buttonD">D</string>
    <string name="buttonE">E</string>
    <string name="buttonPrev">Prev</string>
    <string name="buttonSubmit">Submit</string>
    <string name="buttonNext">Next</string>
    <string name="answeredTextView">Answer Area</string>
    <string name="reach_beginning">Sorry, You have reached the start of questions</string>

    <string name="question1">

            1) Multiple inheritance means:\n
            A) one class inheriting from more super classes.\n
            B) more classes inheriting from one super class.\n
            C) more classes inheriting from more super classes.\n
            D) None of the above.\n
            E) A) and B) above. [D]
    </string>
    <string name="question2">
            2) Which one of the following is not true?\n
            A) A class containing abstract methods is called an abstract class.\n
            B) Abstract methods should be implemented in the derived class.\n
            C) An abstract class cannot have non-abstract methods.\n
            D) A class must be qualified as ‘abstract’ class, if it contains one abstract method.\n
            E) None of the above.[A]
    </string>
    <string name="question3">
            3) Which of the following is not true?\n
            a) An interface can extend another interface.\n
            b) A class which is implementing an interface must implement all the methods of the interface.\n
            c) An interface can implement another interface.\n
            d) An interface is a solution for multiple inheritance in java.\n
            e) None of the above.[C]
    </string>

    <string name="question4">
        4) Which of the following is true?
        a) A finally block is executed before the catch block but after the try block.\n
        b) A finally block is executed, only after the catch block is executed.\n
        c) A finally block is executed whether an exception is thrown or not.\n
        d) A finally block is executed, only if an exception occurs.\n
        e) None of the above.[C]
    </string>
    <string name="question5">
        5) The fields in an interface are implicitly specified as:\n
        a) static only\n
        b) protected\n
        c) private\n
        d) both static and final\n
        e) none of the above.[C]
    </string>
    <string name="question6">
        6) Which of the following is true?\n
        a) A finally block is executed before the catch block but after the try block.\n
        b) A finally block is executed, only after the catch block is executed.\n
        c) A finally block is executed whether an exception is thrown or not.\n
        d) A finally block is executed, only if an exception occurs.\n
        e) None of the above.[C]
    </string>
    <string name="question7">
        7) A constructor\n
        a) Must have the same name as the class it is declared within.\n
        b) Is used to create objects.\n
        c) May be declared private\n
        d) Both A) and B) above\n
        e) a), b) and c) above.[E]
    </string>

    <string name="question8">
        8) What is byte code in the context of Java?\n
        a) The type of code generated by a Java compiler.\n
        b) The type of code generated by a Java Virtual Machine.\n
        c) It is another name for a Java source file.\n
        d) It is the code written within the instance methods of a class.\n
        e) It is another name for comments written within a program.[C]
    </string>
    <string name="question9">
        9)The java run time system automatically calls this method while garbage collection.
        a) finalizer() \n
        b) finalize() \n
        c) finally()\n
        d) finalized() \n
        e) none of the above.[A]
    </string>
    <string name="question10">
        10) A protected member can be accessed in,
        a) a subclass of the same package\n
        b) a non-subclass of the same package\n
        c) a non-subclass of different package\n
        d) a subclass of different package\n
        e) the same class.[A]
    </string>
    <string name="expt">65 = A 66 = B 67 = C 68 = D 69 = E</string>>

</resources>
