<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/wallpaper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <Button
        android:id="@+id/buttonA"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="300dp"
        android:enabled="true"
        android:text="@string/buttonA" />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="70dp"

        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="300dp"
        android:layout_toEndOf="@+id/buttonA"
        android:enabled="true"
        android:text="@string/buttonB" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="70dp"

        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="300dp"
        android:layout_toEndOf="@+id/buttonB"
        android:enabled="true"
        android:text="@string/buttonC" />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="300dp"
        android:layout_toEndOf="@+id/buttonC"
        android:enabled="true"
        android:text="@string/buttonD" />

    <Button
        android:id="@+id/buttonE"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="300dp"
        android:layout_toEndOf="@id/buttonD"
        android:enabled="true"
        android:text="@string/buttonE" />

    <Button
        android:id="@+id/buttonPrev"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="38dp"
        android:layout_marginBottom="225dp"
        android:text="@string/buttonPrev" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="225dp"
        android:layout_toEndOf="@+id/buttonPrev"
        android:text="@string/buttonSubmit" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="225dp"
        android:layout_toEndOf="@+id/buttonSubmit"
        android:text="@string/buttonNext" />

    <Button
        android:id="@+id/answered"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="150dp"

        android:layout_marginBottom="129dp"
        android:text="@string/buttonNext" />

    <TextView
    android:id="@+id/questionBank"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="19dp"
    android:layout_marginTop="150dp"
    android:text="@string/question1"
    android:textColor="#F44336" />

</RelativeLayout>